--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "nodemon scr"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "body-parser": "^1.19.0",
+    "cheerio": "^1.0.0-rc.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql2": "^2.1.0",
